--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div>
-    <app-about></app-about>
+<div class="container">
+    <button class="btn btn-primary">About</button>
+    <button class="btn btn-primary">Contacts</button>
 </div>
