--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -30,11 +30,12 @@
                     <li class="list-group-item " *ngFor="let c of comments ">
                         {{c.message}}
                         <span class="badge ">{{c.date|date: 'dd/MM/yyyy:HH:mm:ss'}}</span>
+                        <!--
                         <li class="list-group-item "> Name: <strong> {{info.name}}</strong></li>
-                        <li class="list-group-item "> Contact: <strong>{{info.tel}}</strong></li>
+                        <li class="list-group-item "> Contact: <strong>{{info.tel}}</strong></li>-->
+
                 </ul>
             </div>
-
         </div>
     </div>
 </div>
