--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,20 @@
-<p>contact works!</p>
+<p>
+</p>
+<div class="container">
+    <div class="panel panel-primary ">
+        <div class="panel-heading"> Contact component</div>
+        <div class="panel-body">
+            <h3>Contact:</h3>
+            <div class="panel-body">
+
+                <div>
+
+                    <ul class="list-group">
+                        <li class="list-group-item"> Name: <strong> {{contact.name}}</strong></li>
+                        <li class="list-group-item"> Telephone: <strong>{{contact.tel}}</strong></li>
+                        <li class="list-group-item"> Email: <strong>{{contact.email}}</strong></li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
