Done with this project: Services Component databinding Bootstrap

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,12 +6,15 @@
 
             <div>
                 <h3>Infos:</h3>
+                <p> This is just a web app with two main functionalities: <br/> <strong>Searching pictures:</strong>It gives the possibility to find pictures of different places, people, animalsor things. It uses Pixab.com<br /><strong>Adding new comments:</strong>                    In about, we can add more comments, but the comments disappear once we refresh the page.
+                </p>
+                <!--
                 <ul class="list-group">
                     <li class="list-group-item"> Name: <strong> {{info.name}}</strong></li>
                     <li class="list-group-item"> Telephone: <strong>{{info.tel}}</strong></li>
                     <li class="list-group-item"> Email: <strong>{{info.email}}</strong></li>
                 </ul>
-
+                -->
             </div>
             <div>
                 <div>
