--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="container spacer">
-    <div class="container">
-        <button routerLink="/about " class="btn btn-primary ">About</button>
-        <button routerLink="/contact " class="btn btn-primary ">Contacts</button>
-        <button routerLink="/gallery " class="btn btn-primary ">Gallery</button>
-        <div class="container spacer ">
+<div class="container">
+    <div class="navbar-nav navbar-light bg-light ">
+        <button routerLink="/about" class="btn btn-primary nav-item">About</button>
+        <button routerLink="/contact" class="btn btn-primary nav-item">Contacts</button>
+        <button routerLink="/gallery" class="btn btn-primary nav-item">Gallery</button>
+        <div class="container spacer nav-item">
             <router-outlet></router-outlet>
         </div>
     </div>
