--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,14 +1,27 @@
 <p></p>
 <div class="container">
     <div class="panel panel-primary">
-        <div class="panel-heading">Gallery Component</div>
-        <div class="panel-body">Gallery</div>
+        <div class="panel-heading">Gallery </div>
+
 
         <form #f="ngForm" (ngSubmit)="onSearch(f.value)">
             <div class="form-group">
                 <label>Key Word </label>
                 <input type="text" name="word" ngModel required>
                 <button type="submit" class=" btn btn-primary">Search</button>
+            </div>
+
+
+            <div *ngFor="let p of pagePhotos?.hits" class="col-md-3">
+                <div class="panel panel-primary cadre">
+                    <div class="panel-heading ">
+                        <img class="img-circle" src={{p.userImageURL}} width="50" height="50"> </div>
+                    <div class=" panel-body ">
+                        <p>User: {{p.user}} </p>
+                        <p>Tag: {{p.tags}} </p>
+                        <img src="{{p.previewURL}}">
+                    </div>
+                </div>
             </div>
         </form>
     </div>
